Pull balance data, start order entry

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -1,3 +1,9 @@
+#balances
+  min-height: 1000px
+  overflow: scroll
+#create-order-box
+  border: 2px solid #ccc
+  background-color: #ccc
 .order-box
   height: 200px
   border: 1px solid #ccc
